deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: touchstone-sink
  namespace: touchstone
spec:
  type: ClusterIP
  selector:
    app: touchstone-sink
  ports:
    - name: http
      port: 8080
      targetPort: http
